--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link href="/public/css/style.css" rel="stylesheet">
 
     <title>Vite App</title>
+      <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+      <link href="/public/css/style.css" rel="stylesheet">
+
   </head>
   <body>
     <div id="app"></div>
